...
                        android:text="@string/country_heading"
                        android:textColor="@color/dark_black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/country_selected_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:padding="2dp"
                        android:paddingStart="4dp"
                        android:textColor="@color/dark_black"
...
